refactor(组织成员): 调整组织成员日志内容